@@ -1,5 +1,7 @@
+    ADDED: usermenu: entry to open konfigurator with the useraction-page directly
     ADDED: import/export of keyboard shortcuts
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
+    
     FIXED: custom icons in bookmarks weren't shown
 
 1.51
